--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,50 +6,9 @@
         xmlns:controls="clr-namespace:SQL_Dummy_Data_Generator.Controls"
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
         mc:Ignorable="d"
-        Title="MainWindow" Height="358" Width="1000" Loaded="Window_Loaded">
+        Title="MainWindow" Height="358" Width="1000" Loaded="MainWindow_OnLoaded">
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="150"/>
-            <ColumnDefinition Width="150"/>
-            <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
-        <Grid Grid.Column="0">
-            <Label VerticalAlignment="Top" Height="30">Databases</Label>
-            <ScrollViewer Margin="0,30,0,0">
-                <StackPanel Name="DatabasePanel"/>
-            </ScrollViewer>
-        </Grid>
-        <GridSplitter Grid.Column="0" Width="2" Background="Black"/>
-        <Grid Grid.Column="1">
-            <Label VerticalAlignment="Top" Height="30">Tables</Label>
-            <ScrollViewer Margin="0,30,0,0">
-                <StackPanel Name="TablePanel"/>
-            </ScrollViewer>
-        </Grid>
-        <GridSplitter Grid.Column="1" Width="2" Background="Black"/>
-
-        <Grid Grid.Column="2">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*" />
-                <RowDefinition Height="60" />
-            </Grid.RowDefinitions>
-            <ScrollViewer Grid.Row="0">
-                <StackPanel Name="ColumnPanel">
-                    <!--<controls:BoolColumnControl/>
-                <controls:DateTimeColumnControl/>
-                <controls:IntColumnControl/>
-                <controls:StringColumnControl/>
-                <controls:DecimalColumnControl/>-->
-                </StackPanel>
-            </ScrollViewer>
-            <Grid Grid.Row="1" Name="BottomGrid" IsEnabled="False">
-                <ProgressBar Name="ProgressBar" Height="10" VerticalAlignment="Top"/>
-                <Button Content="Execute" Margin="225,20,0,10" HorizontalAlignment="Left" Width="100" Click="ExecuteButton_Click"/>
-                <Button Content="Save As SQL" Width="100" Margin="330,20,0,10" HorizontalAlignment="Left" Click="SqlButton_Click"/>
-                <xctk:IntegerUpDown Name="RecordCount" Width="100" Margin="105,20,0,10" HorizontalAlignment="Left"/>
-                <Label Content="Records" Margin="0,20,0,10" VerticalAlignment="Center" HorizontalAlignment="Left" Width="100"/>
-            </Grid>
-        </Grid>
+        <Frame Name="MainFrame" NavigationUIVisibility="Hidden"/>
     </Grid>
 </Window>
 
